--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <center>
   <h1>
-    Naveen
+    Alex
   </h1>
 </center>
 <hr>
+
+<p>
+  I'm Alex Freberg, host of Alex The Analyst YouTube Channel where I teach you everything I know about Data Analytics. When I started out as a Data Analyst 5 years ago I had no mentor and no real guide on how to become a Data Analyst. I just sort of winged it and with a bit of luck I was able to land a Data Analyst job.
+</p>
