Added Mobile number

--- a/index.html
+++ b/index.html
@@ -8,3 +8,7 @@
 <p>
   I'm Alex Freberg, host of Alex The Analyst YouTube Channel where I teach you everything I know about Data Analytics. When I started out as a Data Analyst 5 years ago I had no mentor and no real guide on how to become a Data Analyst. I just sort of winged it and with a bit of luck I was able to land a Data Analyst job.
 </p>
+
+<p>
+  Contact: 9940748470
+</p>
